修改主页样式

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,9 +87,28 @@
 
 <div class="container-fluid" id="content">
     <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="panel panel-default">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="row">
+                <div class="col-md-8">
+                    <div id="banner">
+                        <div class="img">
+                            <img src="/img/big1.jpg" alt="">
+                            <img src="/img/big2.jpg" alt="">
+                            <img src="/img/big3.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                        <div class="panel-heading"><img style="width: 30px" src="img/brand.png" alt="">巫婆婆的告示牌</div>
+                        <div class="panel-body">
+                            <%=tips%>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--<div class="panel panel-default">
                 <div class="panel-heading"><img style="width: 30px" src="img/brand.png" alt="">巫婆婆的告示牌</div>
                 <div class="panel-body">
                     <%=tips%>
@@ -101,7 +120,7 @@
                 <div class="panel-body hotblog">
                             <h4 class="media-heading"><%=htitle%></h4>
                            <%-hblog%>
-                    <!--<div class="media">
+                    &lt;!&ndash;<div class="media">
                         <div class="media-left">
                                 <img class="media-object" style="width: 50px" src="img/cup2.png" alt="123">
                         </div>
@@ -109,8 +128,8 @@
                             <h4 class="media-heading">123154564564</h4>
                             jdhfisdgfdhvioshd
                         </div>
-                    </div>-->
-                    <!--<div class="media">
+                    </div>&ndash;&gt;
+                    &lt;!&ndash;<div class="media">
                         <div class="media-left">
                                 <img class="media-object" style="width: 50px" src="img/cup3.png" alt="123">
                         </div>
@@ -118,7 +137,7 @@
                             <h4 class="media-heading">123154564564</h4>
                             jdhfisdgfdhvioshd
                         </div>
-                    </div>-->
+                    </div>&ndash;&gt;
                 </div>
             </div>
 
@@ -149,9 +168,9 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
         </div>
-        <div class="col-md-2"></div>
+        <div class="col-md-1"></div>
     </div>
 
 </div>
