添加轮播图

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -93,9 +93,13 @@
                 <div class="col-md-8">
                     <div id="banner">
                         <div class="img">
-                            <img src="/img/big1.jpg" alt="">
-                            <img src="/img/big2.jpg" alt="">
-                            <img src="/img/big3.jpg" alt="">
+                            <img class="active_img" src="/img/big1.jpg" alt="">
+                            <img src="/img/big2.jpg" alt="" style="display: none">
+                            <img src="/img/big3.jpg" alt="" style="display: none">
+                        </div>
+                        <div class="banner_btn">
+                            <div class="btn_left glyphicon glyphicon-chevron-left"></div>
+                            <div class="btn_right glyphicon glyphicon-chevron-right"></div>
                         </div>
                     </div>
                 </div>
