--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,8 @@
         <div class="col-md-1"></div>
         <div class="col-md-10">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-9">
+
                     <div id="banner">
                         <div class="img">
                             <img class="active_img" src="/img/big1.jpg" alt="">
@@ -102,13 +103,51 @@
                             <div class="btn_right glyphicon glyphicon-chevron-right"></div>
                         </div>
                     </div>
+
+                    <div id="hotArt">
+                        <div class="hotHeader">
+                            <p>热门文章</p>
+                        </div>
+                        <div class="artBody">
+                            <h3><%=hblog.title%></h3>
+                            <div>
+                                <%-hblog.content%>
+                            </div>
+                        </div>
+                        <div class="artFooter">
+                            <a href="/blog/<%=hblog.id%>">去往原文章</a>
+                            <a href="/blog/<%=hblog.id%>#sendinp">评论</a>
+                            <i><%=hblog.time%></i>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="panel panel-default">
-                        <div class="panel-heading"><img style="width: 30px" src="img/brand.png" alt="">巫婆婆的告示牌</div>
-                        <div class="panel-body">
+                <div class="col-md-3">
+                    <div id="notice">
+                        <div class="noticeHeader">
+                            公示栏
+                        </div>
+                        <div>
                             <%=tips%>
                         </div>
+                    </div>
+
+                    <div id="vlog">
+                        <div class="vlogHeader">
+                            最新一期的vLog
+                        </div>
+                        <video src="<%=Vurl%>" controls="controls" style="width: 100%"></video>
+                    </div>
+
+                    <div id="recommend">
+                        <div class="recHeader">
+                            推荐阅读
+                        </div>
+                        <ul>
+                            <li><a href="">1245</a></li>
+                            <li><a href="">123456</a></li>
+                            <li><a href="">7896</a></li>
+                            <li><a href="">97546</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -122,8 +161,8 @@
             <div class="panel panel-default">
                 <div class="panel-heading"><img style="width: 30px" src="img/hot.png" alt="">热门文章</div>
                 <div class="panel-body hotblog">
-                            <h4 class="media-heading"><%=htitle%></h4>
-                           <%-hblog%>
+                            <h4 class="media-heading"></h4>
+
                     &lt;!&ndash;<div class="media">
                         <div class="media-left">
                                 <img class="media-object" style="width: 50px" src="img/cup2.png" alt="123">
