--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -40,6 +40,7 @@ body{
     position: relative;
     line-height: 20em;
     padding: 0;
+    margin-bottom: 10px;
 }
 #banner .img{
     position: relative;
@@ -80,6 +81,81 @@ body{
     color: white;
 }
 
+#hotArt{
+    width: 100%;
+    min-height: 300px;
+    background-color: #fffe7d;
+   margin-bottom: 10px;
+    border-radius: 8px;
+}
+.hotHeader{
+    width: 100%;
+    height: 35px;
+    background-color: #00AA88;
+    border-radius: 8px 8px 0 0;
+}
+.hotHeader>p{
+    width: 100px;
+    height: 35px;
+    display: block;
+    float: left;
+    text-align: center;
+    line-height: 35px;
+    padding: 0;
+    margin: 0;
+    color: white;
+}
+.artBody{
+    width: 100%;
+    min-height: 265px;
+}
+.artBody>h3{
+    margin: 0;
+    padding: 10px;
+    text-align: center;
+}
+.artBody>div{
+    padding: 10px;
+    color: #98a388;
+    font-size: 16px;
+}
+.artFooter{
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+}
+.artFooter>i{
+    padding-right: 20px;
+    float: right;
+}
+.artFooter>a{
+    color: #00A000;
+}
+
+#notice,#vlog,#recommend{
+    width: 100%;
+    background-color: white;
+    border-radius: 8px;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+.noticeHeader,.vlogHeader,.recHeader{
+    width: 100%;
+    height: 35px;
+  line-height: 35px;
+    border-bottom: 1px solid #979797;
+    color: #0b2e13;
+}
+#vlog>video{
+    margin-top: 5px;
+    outline: none;
+}
+#recommend>ul{
+    list-style: none;
+}
+#recommend>ul>li>a{
+    color: #00AA88;
+}
 
 
 
