--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,7 +143,7 @@
                             推荐阅读
                         </div>
                         <ul>
-                            <li><a href="">1245</a></li>
+                            <li><a href="/blog/000074">博客页面的排版基本就这样了</a></li>
                             <li><a href="">123456</a></li>
                             <li><a href="">7896</a></li>
                             <li><a href="">97546</a></li>
