将侧边栏样式统一到其他页面

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -98,15 +98,30 @@
                     </div>
                     <div id="morebtn"><input type="button" value="加载更多" id="more"></div>
                 </div>
-                <div class="col-md-3" style="padding: 0; margin-top: 60px;" id="rightBarBlock">
-                    <div id="rightBar">
-                        <p class="glyphicon glyphicon-list-alt">公示栏</p>
+                <div class="col-md-3" style="padding: 0; margin-top: 70px;" id="rightBarBlock">
+                   <div id="notice">
+                        <div class="noticeHeader glyphicon glyphicon-list-alt"">
+                            公示栏
+                        </div>
+                        <div class="noticeBody">
+
+                        </div>
                     </div>
-                    <div id="rightBar">
-                        <p class="glyphicon glyphicon-link">推荐网站</p>
+
+                    <div id="vlog">
+                        <div class="vlogHeader">
+                            最新一期的vLog
+                        </div>
+                        <video  controls="controls" style="width: 100%" class="vlogBody"></video>
                     </div>
-                    <div id="rightBar">
-                        <p>小黑屋</p>
+
+                    <div id="recommend">
+                        <div class="recHeader glyphicon glyphicon-link">
+                            推荐阅读
+                        </div>
+                        <ul class="recBody">
+
+                        </ul>
                     </div>
                 </div>
             </div>
