--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-md-3">
                     <div id="notice">
-                        <div class="noticeHeader">
+                        <div class="noticeHeader glyphicon glyphicon-list-alt"">
                             公示栏
                         </div>
                         <div class="noticeBody">
@@ -131,7 +131,7 @@
                     </div>
 
                     <div id="recommend">
-                        <div class="recHeader">
+                        <div class="recHeader glyphicon glyphicon-link">
                             推荐阅读
                         </div>
                         <ul class="recBody">
