--- a/views/index.ejs
+++ b/views/index.ejs
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-md-3">
                     <div id="notice">
-                        <div class="noticeHeader glyphicon glyphicon-list-alt"">
+                        <div class="noticeHeader glyphicon glyphicon-list-alt">
                             公示栏
                         </div>
                         <div class="noticeBody">
