--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,6 +112,14 @@
                             <i><%=hblog.time%></i>
                         </div>
                     </div>
+
+                    <div id="about">
+                        <div class="aboutHeader">关于我啊</div>
+                        <div class="aboutBody">
+
+                        </div>
+                        <div class="aboutFooter"></div>
+                    </div>
                 </div>
                 <div class="col-md-3">
                     <div id="notice">
