--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -132,6 +132,17 @@ body{
     color: #00A000;
 }
 
-
+#about{
+    width: 100%;
+    height: 300px;
+    background-color: white;
+    border-radius: 8px;
+}
+.aboutHeader{
+    height: 35px;
+    line-height: 35px;
+    padding-left: 20px;
+    color: #9e9e9e;
+}
 
 
