--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         loading...
     </div>
 </div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="background-color: white">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
