'添加部分动画效果'

--- a/Public/css/blog.css
+++ b/Public/css/blog.css
@@ -75,11 +75,11 @@ body{
     font-size: 12px;
     width: 55%;
 }
-.sea{
+.seas{
     padding-left: 20px;
     float: left;
 }
-.sea>input{
+.seas>input{
     outline: none;
 }
 #ide{
