--- a/Public/css/common.css
+++ b/Public/css/common.css
@@ -1,60 +1,96 @@
-#exit{
+#exit {
     cursor: pointer;
 }
-body{
+
+.navbar {
+    position: fixed;
+    top: 0;
+}
+
+/*消息小框框啊*/
+.badge {
+    background-color: red;
+}
+
+body {
     overflow-x: hidden;
 }
 
-.navbar-inverse{
-    background-color: white;
+.navbar-inverse {
+    background: rgba(255, 255, 255, 0.43);
     border: none;
 }
-.navbtn:hover{
+
+.navbtn:hover {
     font-size: 20px;
-    background-color: #f2f2f2;
     color: black;
 }
-.navbar-inverse .navbar-nav>li>a:hover{
-       color: #f8d6a0;
-}
-.navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:focus, .navbar-inverse .navbar-nav>.open>a:hover{
-      color: #f8d6a0;
-    background-color: #f2f2f2;
-}
-.navbar-inverse .navbar-collapse{
-    border-color: wheat;
-}
-.navbar-toggle{
-    background-color: #fff318;
-    border:none;
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #51504e;
+    background: none;
 }
 
-.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover{
-    background-color: #fff318;
-    border:none;
+.navbar-inverse .navbar-nav > li > a:hover {
+    color: #f8d6a0;
 }
-.navbar{
+
+.navbar-inverse .navbar-nav > li > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
+    color: #f8d6a0;
+    animation: proRotate 1s;
+    background-color: #f3f3f3;
+}
+
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover {
+    color: #f8d6a0;
+    background-color: #f2f2f2;
+}
+
+@keyframes proRotate {
+    0% {
+        transform: perspective(400px) rotateX(180deg);
+    }
+    100% {
+        transform: perspective(400px) rotateX(0deg);
+    }
+}
+
+.navbar-inverse .navbar-collapse {
+    border-color: wheat;
+}
+
+.navbar-toggle {
+    background-color: #fff318;
+    border: none;
+}
+
+.navbar-inverse .navbar-toggle:focus, .navbar-inverse .navbar-toggle:hover {
+    background-color: #fff318;
+    border: none;
+}
+
+.navbar {
     position: relative;
     z-index: 2;
 }
 
-#content{
-    margin-top: -20px;
+#content {
     padding-top: 20px;
-    position: relative;
 }
-.navbar-inverse .navbar-nav>li>.nowhtml {
+
+.navbar-inverse .navbar-nav > li > .nowhtml {
     color: #000000;
     font-size: 20px;
 }
 
-.container-fluid{
+.container-fluid {
     padding: 0;
     margin: 0;
 }
-.tips{
+
+.tips {
     display: none;
-    top:35%;
+    top: 35%;
     width: 50%;
     height: 80px;
     position: fixed;
@@ -68,20 +104,20 @@ body{
 
 
 /* 登录组件样式设置 */
-.like_panel{
-	width: 100%;
-	height: 30px;
-}
-.v_likebtn{
-	cursor: pointer;
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
-	float: right;
-	font-size: 20px;
-    color: #9d9d9d;
+.like_panel {
+    width: 100%;
+    height: 30px;
 }
 
+.v_likebtn {
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    float: right;
+    font-size: 20px;
+    color: #9d9d9d;
+}
 
 
 .loader {
@@ -179,36 +215,49 @@ body{
 }
 
 
-
-#notice,#vlog,#recommend{
+#notice, #vlog, #recommend {
     width: 100%;
     background-color: white;
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 10px;
 }
-.noticeHeader,.vlogHeader,.recHeader{
+
+.noticeHeader, .vlogHeader, .recHeader {
     width: 100%;
     height: 35px;
-  line-height: 35px;
+    line-height: 35px;
     border-bottom: 1px solid #979797;
     color: #0b2e13;
 }
-#vlog>video{
+
+#vlog > video {
     margin-top: 5px;
     outline: none;
 }
-#recommend>ul{
+
+#recommend > ul {
     list-style: none;
 }
-#recommend>ul>li{
+
+#recommend > ul > li {
     margin-top: 5px;
 }
-#recommend>ul>li>a{
+
+#recommend > ul > li > a {
     color: #00AA88;
 }
 
 
+#neck {
+    margin-top: -20px;
+    background-image: url("/img/yezishu.jpg");
+    background-repeat: no-repeat;
+    height: 400px;
+    background-position: center top;
+    background-size: cover;
+    position: relative;
+}
 
 
 
