'添加部分动画效果'

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -33,7 +33,7 @@
         loading...
     </div>
 </div>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="position: fixed;top: 0;width: 100%">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -69,6 +69,10 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<div id="neck">
+
+</div>
+
 <div class="container-fluid" id="content">
     <div class="row">
         <div class="col-md-1"></div>
@@ -76,7 +80,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="blogHeader">
-                        <div class="sea">
+                        <div class="seas">
                             <input type="text" class="seainp" placeholder="输入你要搜索的内容">
                             <input type="button" value="搜索" class="seabtn">
                         </div>
