--- a/Public/css/common.css
+++ b/Public/css/common.css
@@ -76,6 +76,7 @@ body {
 
 #content {
     padding-top: 20px;
+    margin-top: -15px;
 }
 
 .navbar-inverse .navbar-nav > li > .nowhtml {
@@ -221,14 +222,19 @@ body {
     border-radius: 8px;
     padding: 10px;
     margin-bottom: 10px;
+      border: 1px solid #ebebeb;
 }
-
+#recommend{
+    height: 280px;
+    overflow-y: auto;
+}
 .noticeHeader, .vlogHeader, .recHeader {
     width: 100%;
     height: 35px;
     line-height: 35px;
     border-bottom: 1px solid #979797;
     color: #0b2e13;
+    font-weight: bolder;
 }
 
 #vlog > video {
@@ -253,7 +259,7 @@ body {
     margin-top: -20px;
     background-image: url("/img/yezishu.jpg");
     background-repeat: no-repeat;
-    height: 400px;
+    height: 350px;
     background-position: center top;
     background-size: cover;
     position: relative;
