--- a/Public/css/index.css
+++ b/Public/css/index.css
@@ -1,37 +1,44 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     overflow-x: hidden;
 }
+
 /*页面重构*/
 
 
-.container-fluid{
+.container-fluid {
     padding: 0;
     margin: 0;
 }
-.panel-default>.panel-heading{
+
+.panel-default > .panel-heading {
     background-color: #626262;
     color: white;
 }
-.ask>.panel-body{
+
+.ask > .panel-body {
     padding: 0;
     border: none;
 }
-.vid>.panel-body{
+
+.vid > .panel-body {
     padding: 0;
 }
-.list-group-item{
+
+.list-group-item {
     background-color: rgba(255, 255, 255, 0);
 }
-.panel{
+
+.panel {
     background-color: rgba(255, 255, 255, 0.92);
 
 }
 
-#banner{
+#banner {
     overflow: hidden;
     height: 20em;
     position: relative;
@@ -39,20 +46,24 @@ body{
     padding: 0;
     margin-bottom: 10px;
 }
-#banner .img{
+
+#banner .img {
     position: relative;
     height: 20em;
 }
-#banner>.img>.active{
+
+#banner > .img > .active {
     display: block;
 }
-#banner .img img{
+
+#banner .img img {
     position: absolute;
     border-radius: 8px;
     width: 100%;
     height: 20em;
 }
-#banner>.banner_btn{
+
+#banner > .banner_btn {
     display: none;
     padding-left: 10px;
     padding-right: 10px;
@@ -61,7 +72,8 @@ body{
     height: 30px;
     position: absolute;
 }
-#banner>.banner_btn>div{
+
+#banner > .banner_btn > div {
     width: 30px;
     height: 30px;
     cursor: pointer;
@@ -69,29 +81,61 @@ body{
     line-height: 30px;
     font-size: 25px;
 }
-#banner>.banner_btn>.btn_left{
+
+#banner > .banner_btn > .btn_left {
     color: white;
     float: left;
 }
-#banner>.banner_btn>.btn_right{
+
+#banner > .banner_btn > .btn_right {
     float: right;
     color: white;
 }
 
-#hotArt{
+#hotArt {
     width: 100%;
     min-height: 300px;
-    background-color: #feffe7;
-   margin-bottom: 10px;
+    background-color: #fefff9;
+    margin-bottom: 10px;
     border-radius: 8px;
+    margin-top: 20px;
+    border: 1px solid #ebebeb;
 }
-.hotHeader{
+
+.hotimg {
+    height: 120px;
+    float: left;
+    margin-left: 10px;
+    margin-top: -20px;
+    border-radius: 5px;
+    box-shadow: 0 1px 5px black;
+}
+
+.atrinfo {
+    float: left;
+    padding-left: 35px;
+    color: white;
+    font-style: unset;
+}
+.atrinfo a{
+    color: white;
+    text-decoration: none;
+
+}
+.atrinfo a:hover{
+    color: #7f7f7f;
+}
+.hotHeader {
     width: 100%;
-    height: 35px;
-    background-color: #fdfffd;
+    height: 150px;
+    background: -webkit-linear-gradient(#9dfcb1, white); /* Safari 5.1 - 6.0 */
+  background: -o-linear-gradient(#9dfcb1, white); /* Opera 11.1 - 12.0 */
+  background: -moz-linear-gradient(#9dfcb1, white); /* Firefox 3.6 - 15 */
+  background: linear-gradient(#9dfcb1, white); /* 标准的语法 */
     border-radius: 8px 8px 0 0;
 }
-.hotHeader>p{
+
+.hotHeader > p {
     width: 100px;
     height: 35px;
     display: block;
@@ -102,44 +146,80 @@ body{
     margin: 0;
     color: #a3a3a3;
 }
-.artBody{
+
+.artBody {
     width: 100%;
-    min-height: 265px;
+    height: 100px;
+    overflow: hidden;
 }
-.artBody>h3{
+
+.artBody > h3 {
     margin: 0;
     padding: 10px;
     text-align: center;
 }
-.artBody>div{
+
+.artBody > div {
     padding: 10px;
     color: #98a388;
     font-size: 16px;
 }
-.artFooter{
+
+.artFooter {
     width: 100%;
     height: 30px;
     line-height: 30px;
 }
-.artFooter>i{
+
+.artFooter > i {
     padding-right: 20px;
     float: right;
 }
-.artFooter>a{
-    color: #00A000;
-}
-
-#about{
-    width: 100%;
-    height: 300px;
-    background-color: white;
+.readmore{
+    display: block;
+    float: left;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background-color: #0b8989;
     border-radius: 8px;
 }
-.aboutHeader{
+.commbtn{
+    margin-left: 5px;
+    display: block;
+    float: left;
+    width: 80px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    background-color: #0b8989;
+    border-radius: 8px;
+}
+.artFooter > a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+#about {
+    width: 100%;
+    background-color: white;
+    border-radius: 8px;
+    border: 1px solid #ebebeb;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+.aboutHeader {
     height: 35px;
     line-height: 35px;
     padding-left: 20px;
     color: #9e9e9e;
+    font-size: 20px;
+}
+.aboutBody{
+    padding-left: 20px;
+    color: #a0a0a0;
 }
 
 
