--- a/views/blogdetails.ejs
+++ b/views/blogdetails.ejs
@@ -30,7 +30,7 @@
     </div>
 </div>
 
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="position: fixed;top: 0;width: 100%">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -66,7 +66,9 @@
     </div><!-- /.container-fluid -->
 </nav>
 
+<div id="neck">
 
+</div>
 <div class="container-fluid" id="content">
     <div class="row">
         <div class="col-md-2"></div>
