--- a/views/personCenter.ejs
+++ b/views/personCenter.ejs
@@ -81,8 +81,8 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li><a class="info">个人信息</a></li>
-                            <li style="<%= style %>"><a class="changeinfo">修改信息</a></li>
-                            <li style="<%= style %>"><a class="unread">未读消息</a></li>
+                            <li style="<%= style2 %>"><a class="changeinfo">修改信息</a></li>
+                            <li style="<%= style2 %>"><a class="unread">未读消息</a></li>
                             <li><a class="art">已发文章</a></li>
                         </ul>
                     </div>
@@ -92,8 +92,8 @@
                     <div class="bodyleft col-md-2">
                         <ul>
                             <li><a class="info">个人信息</a></li>
-                            <li style="<%= style %>"><a class="changeinfo">修改信息</a></li>
-                            <li style="<%= style %>"><a class="unread">未读消息</a></li>
+                            <li style="<%= style2%>"><a class="changeinfo">修改信息</a></li>
+                            <li style="<%= style2 %>"><a class="unread">未读消息</a></li>
                             <li><a class="art">已发文章</a></li>
                         </ul>
                     </div>
