'完善后台功能'

--- a/Public/css/admin.css
+++ b/Public/css/admin.css
@@ -918,4 +918,11 @@ ul{
 .nowcontent{
 	width: 100%;
 	height: 100%;
+	overflow-y: auto;
+	position: relative;
+}
+.nowVlog{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
